[add]console and w3c format http logging services

--- a/E01/appsettings.json
+++ b/E01/appsettings.json
@@ -3,6 +3,20 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      },
+      "FormatterName": "json",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "IncludeScopes": true,
+        "TimestampFormat": "yyyy-MM-ddTHH:mm:ss",
+        "JsonWriterOptions": {
+          "Indented": true
+        }
+      }
     }
   },
   "AllowedHosts": "*"
