--- a/E01-spring/Dockerfile
+++ b/E01-spring/Dockerfile
@@ -8,4 +8,4 @@ RUN gradle clean build
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 COPY --from=build-env "/src/build/libs/e01-0.0.1-SNAPSHOT.jar" .
-ENTRYPOINT [ "java", "-jar", "/app/e01-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT [ "java", "-jar", "e01-0.0.1-SNAPSHOT.jar"]
