--- a/E01-spring/src/main/resources/application.yml
+++ b/E01-spring/src/main/resources/application.yml
@@ -7,3 +7,9 @@ logging:
   level:
     root: ERROR
     com.tosan.dockerkubernetesetest.e01: INFO
+
+management:
+  endpoint.health.probes.enabled: true
+  health:
+    livenessState.enabled: true
+    readinessState.enabled: true
