--- a/E01-spring/src/main/kubernetes/manifest/deployment.yaml
+++ b/E01-spring/src/main/kubernetes/manifest/deployment.yaml
@@ -15,3 +15,17 @@ spec:
       containers:
         - name: http-service
           image: e01-spring:0.0.1
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 20
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 20
+            periodSeconds: 10
+          ports:
+            - containerPort: 8080
