--- a/E01-spring/src/main/kubernetes/manifest/deployment.yaml
+++ b/E01-spring/src/main/kubernetes/manifest/deployment.yaml
@@ -29,3 +29,10 @@ spec:
             periodSeconds: 10
           ports:
             - containerPort: 8080
+          lifecycle:
+            preStop:
+              exec:
+                command: [ "sleep", "30" ]
+          imagePullPolicy: IfNotPresent
+      restartPolicy: OnFailure
+      terminationGracePeriodSeconds: 30
