--- a/E01-spring/src/main/kubernetes/manifest/deployment.yaml
+++ b/E01-spring/src/main/kubernetes/manifest/deployment.yaml
@@ -29,10 +29,13 @@ spec:
             periodSeconds: 10
           ports:
             - containerPort: 8080
+          resources:
+            limits:
+              cpu: 500m
+              memory: 500Mi
           lifecycle:
             preStop:
               exec:
                 command: [ "sleep", "30" ]
           imagePullPolicy: IfNotPresent
-      restartPolicy: OnFailure
       terminationGracePeriodSeconds: 30
